# COL781-Assignment-2

./: .gitignore  CMakeLists.txt  README.md
src/: catmull_clark.cpp  custom.cpp  example.cpp  extrude.cpp  halfedge.cpp  halfedge.hpp  hw.cpp  hw.hpp  shapes.cpp  square.cpp  testread1.cpp  umbrella.cpp  unitcube.cpp  unitsphere.cpp  viewer.cpp  viewer.hpp
